--- a/styles/scss/layout/spaces.scss
+++ b/styles/scss/layout/spaces.scss
@@ -5,6 +5,13 @@
 .p10{
     padding: 10px;
 }
+.p-lr-10{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.p-t-10{
+    padding-top: 10px;
+}
 /*----- padding ------*/
 
 
