search bar component added

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -23,3 +23,7 @@
 /*----- Themes ------*/
 @import './themes/themes.scss';
 /*----- Themes ------*/
+
+/*----- Common Styles ------*/
+@import './common.scss';
+/*----- Common Styles ------*/
