fetch userprofile fn added

--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -7,3 +7,20 @@
     overflow: visible;
     border-radius: 999px;
 }
+
+.user-profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: cadetblue;
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+    transition: transform .5s ease;
+    img{
+        transform: scale(1.5);
+    }
+}
+.user-profile:hover{
+    transform: scale(1.1);
+}
