--- a/styles/scss/common.scss
+++ b/styles/scss/common.scss
@@ -1,3 +1,6 @@
+body{
+    cursor: default;
+}
 .login-btn{
     background-color: $background-highlight;
     color: $text-base;
@@ -23,4 +26,16 @@
 }
 .user-profile:hover{
     transform: scale(1.1);
+}
+.icon-container{
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    transition: transform .5s ease;
+    img{
+        transform: scale(1.5);
+    }
+}
+.icon-container:hover{
+    background-color: $hover-background;
 }
